[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/art/interactive/interactive/tablet.png" type="Texture" id=1]
[ext_resource path="res://assets/art/fullscreen/redWireCut.png" type="Texture" id=2]
[ext_resource path="res://scenes/interact/FSTablet.gd" type="Script" id=3]
[ext_resource path="res://assets/art/fullscreen/greenWireCut.png" type="Texture" id=4]
[ext_resource path="res://assets/art/fullscreen/yellowWireCut.png" type="Texture" id=5]

[node name="Tablet" type="Popup"]
pause_mode = 2
margin_left = -797.0
margin_top = -521.0
margin_right = -797.0
margin_bottom = -521.0
rect_scale = Vector2( 8, 8 )
script = ExtResource( 3 )

[node name="TabletOff" type="Sprite" parent="."]
position = Vector2( 163, 100 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="TabletOff"]
margin_left = -19.0
margin_top = -31.0
margin_right = 18.0
margin_bottom = 29.0
color = Color( 0, 0, 0, 1 )

[node name="Tablet" type="Sprite" parent="."]
position = Vector2( 163, 100 )
texture = ExtResource( 1 )

[node name="RedWireCut" type="Sprite" parent="Tablet"]
visible = false
position = Vector2( -12.625, 0.125 )
scale = Vector2( 1, 0.2 )
texture = ExtResource( 2 )

[node name="YellowWireCut" type="Sprite" parent="Tablet"]
visible = false
position = Vector2( 11.5, 0.125 )
scale = Vector2( 1, 0.2 )
texture = ExtResource( 5 )

[node name="GreenWireCut" type="Sprite" parent="Tablet"]
visible = false
position = Vector2( -0.625, 0.5 )
scale = Vector2( 1, 0.2 )
texture = ExtResource( 4 )

[connection signal="about_to_show" from="." to="." method="_on_Tablet_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_Tablet_popup_hide"]
